executable(
  'test-initcpio',
  files('unit-initcpio.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-pacmanconf',
  files('unit-pacmanconf.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-fstab_gen',
  files('unit-fstab_gen.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-crypttab_gen',
  files('unit-crypttab_gen.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-grub_config_gen',
  files('unit-grub_config_gen.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-mtab',
  files('unit-mtab.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-locale',
  files('unit-locale.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-package_profiles',
  files('unit-package_profiles.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-fetch_file',
  files('unit-fetch_file.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-kernel_params',
  files('unit-kernel_params.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-btrfs',
  files('unit-btrfs.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-refind_config_gen',
  files('unit-refind_config_gen.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)

executable(
  'test-refind_extra_kern_strings',
  files('unit-refind_extra_kern_strings.cpp'),
  dependencies: deps,
  link_with: [gucc_lib],
  include_directories: [include_directories('../include')],
  install: false)
